@@ -7,12 +7,12 @@ AM_MAINTAINER_MODE
 
 AM_ACLOCAL_INCLUDE(macros)
 
+AM_PROG_XML_I18N_TOOLS
+
 dnl
 dnl let applications configure for gnome
 dnl
 gnome_cv_use_gnome=yes
-
-
 
 GNOME_INIT(capplet)
 
@@ -496,10 +496,6 @@ gsm/help/C/Makefile
 gsm/default.session.5
 gsm/gnome-session.1
 smproxy/Makefile
-grdb/Makefile
-grdb/data/Makefile
-grdb/src/Makefile
-grdb/capplet/Makefile
 intl/Makefile
 omf-install/Makefile])
 
