@@ -1,3 +1,7 @@
+2001-02-25  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* configure.in: don't create grdb Makefiles.
+
 2001-02-19  Dan Mueth   <dan@eazel.com>
 
 	* Localized categories in OMF metadata for:
